testdata/baselines/reference/submodule/conformance/iteratorSpreadInCall4.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
iteratorSpreadInCall4.ts(5,20): error TS2304: Cannot find name 'Symbol'.
iteratorSpreadInCall4.ts(10,6): error TS2304: Cannot find name 'Symbol'.
iteratorSpreadInCall4.ts(15,5): error TS2556: A spread argument must either have a tuple type or be passed to a rest parameter.
iteratorSpreadInCall4.ts(15,8): error TS2488: Type 'SymbolIterator' must have a '[Symbol.iterator]()' method that returns an iterator.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== iteratorSpreadInCall4.ts (4 errors) ====
    function foo(s1: symbol, ...s: symbol[]) { }
    class SymbolIterator {
        next() {
            return {
                value: Symbol(),
                       ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
                done: false
            };
        }
    
        [Symbol.iterator]() {
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
            return this;
        }
    }
    
    foo(...new SymbolIterator);
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2556: A spread argument must either have a tuple type or be passed to a rest parameter.
           ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'SymbolIterator' must have a '[Symbol.iterator]()' method that returns an iterator.